CKS ready to Deploy 16